--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "luxon": "^3.5.0",
+    "next": "15.1.2",
+    "node-appwrite": "^14.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "postcss": "^8",
